# utc-wifi-manager

./: CMakeLists.txt  tct-wifi-manager-core.c  tct-wifi-manager-core_mobile.h  tct-wifi-manager-core_tizeniot.h  tct_common.h  utc-wifi-manager-ap.c  utc-wifi-manager-common.c  utc-wifi-manager-common.h  utc-wifi-manager.c  utc-wifi-manager.conf
packaging/: utc-wifi-manager.spec
